tests/regression/100_MODULE_SYSTEM/110_IMPORTS/110_008_dir_import_no_pub/expected.txt
error[KORU010]: '|>' cannot start a line
  --> tests/regression/100_MODULE_SYSTEM/110_IMPORTS/110_008_dir_import_no_pub/input.kz:14:0
    |
 14 | |> app.lib.raylib.graphics:clear(color: 0xFF0000)
    | ^^
  hint: '|>' is inline glue only — it joins a body to its branch handler, or chains void events on one line. Three legal layouts: (1) fold inline `~A() |> B()`; (2) split into separate top-level statements `~A()` then `~B()`; (3) delete the redundant `|> _` if the head suffices.

error[KORU010]: '|>' cannot start a line
  --> tests/regression/100_MODULE_SYSTEM/110_IMPORTS/110_008_dir_import_no_pub/input.kz:16:8
    |
 16 |         |> app.lib.raylib.audio:stop()
    |        ^^
  hint: '|>' is inline glue only — it joins a body to its branch handler, or chains void events on one line. Three legal layouts: (1) fold inline `~A() |> B()`; (2) split into separate top-level statements `~A()` then `~B()`; (3) delete the redundant `|> _` if the head suffices.

